<?xml version="1.0"?>
<package>
  <name>organized_fast_mesh</name>
  <version>1.0.0</version>
  <description>creates an organized_fast_mesh out of an organized point cloud</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD</license>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>lvr_ros</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lvr_ros</run_depend>
  <run_depend>mesh_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
